--- a/style.css
+++ b/style.css
@@ -150,6 +150,43 @@ header li a:hover {
     padding: 15px 45px;
     border-radius: 5px;
 }
+.testimonial {
+    height: 400px;
+    /* background-color: rgb(48, 156, 245); */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 500px;
+}
+.textbox {
+    margin:50px 50px;
+    height: 300px;
+    /* background-color: salmon; */
+    width: 40%;
+    align-items: center;
+    text-align: center;
+    border: 2px solid lightblue;
+   
+}
+.testimonial1  h2{
+    margin-top: 100px;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: normal;
+    text-align: center;
+    font-size: 50px;
+}   
+.textbox img {
+    width: 10%;
+    border-radius: 100px;
+}
+.name {
+    font-size: 20px;
+}
+.chat {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+}
 footer {
     text-align: center;
     margin: 150px 0px 100px 0px;
