--- a/style.css
+++ b/style.css
@@ -152,21 +152,19 @@ header li a:hover {
 }
 .testimonial {
     height: 400px;
-    /* background-color: rgb(48, 156, 245); */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-left: 200px;
+    margin-right: 200px;
     margin-bottom: 500px;
 }
 .textbox {
     margin:50px 50px;
     height: 300px;
-    /* background-color: salmon; */
     width: 40%;
     align-items: center;
     text-align: center;
-    border: 2px solid lightblue;
-   
 }
 .testimonial1  h2{
     margin-top: 100px;
@@ -180,11 +178,12 @@ header li a:hover {
     border-radius: 100px;
 }
 .name {
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
 .chat {
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: left;
 }
 footer {
